# ResearchLibrary

./: .env.example  .gitignore  app.py  download_attachments.py  generate_links.py  paper_index.md  print_subcategories.py  pyproject.toml  refresh_index.py  subcategory_suggestions.json  suggest_subcategories.py
src/research_library/: analysis.py  cli.py  downloads.py  embeddings.py  links.py  server.py  tools.py  zotero_client.py
tests/: conftest.py  test_embeddings.py  test_semantic_tools.py  test_tools.py  test_zotero_client.py
