[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-library"
version = "0.1.0"
description = "MCP server exposing a Zotero library to Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyzotero>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
research-library = "research_library.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_library"]
