[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-library"
version = "0.1.0"
description = "MCP server exposing a Zotero library to Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyzotero>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
research-library = "research_library.server:main"

[project.optional-dependencies]
pdf = ["pymupdf>=1.27.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/research_library"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
